tests/NormalTests/paczka1/small_fuzzy/85641557.err
Error in line 1: Dxa71GtmJ0f A937 85,7
Error in line 7: gO7C1MwqAJc A686 26,8
Error in line 12: gO7C1MwqAJc A976 0,0
Error in line 14: gO7C1MwqAJc A686 67,5
